--- a/employee-management/source_code/build.gradle
+++ b/employee-management/source_code/build.gradle
@@ -26,13 +26,12 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter-web")
-
-    // JPA Data (We are going to use Repositories, Entities, Hibernate, etc...)
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    // Use MySQL Connector-J
-    compile 'mysql:mysql-connector-java'
-
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+ compile (
+		'group1:artifac_id1:version1',
+		'group2:artifac_id2:version2'
+	)
+	testCompile (
+		'group1:artifac_id1:version1',
+		'group2:artifac_id2:version2'
+	)
 }
