--- a/employee-management/source_code/build.gradle
+++ b/employee-management/source_code/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 bootJar {
-    baseName = 'gs-accessing-data-mysql'
+    baseName = 'EmployeeManager'
     version =  '0.1.0'
 }
 
@@ -26,12 +26,13 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+
  compile (
-		'group1:artifac_id1:version1',
-		'group2:artifac_id2:version2'
+		'org.springframework.boot:spring-boot-starter-data-jpa',
+		'org.springframework.boot:spring-boot-starter-web',
+		'mysql:mysql-connector-java'
 	)
-	testCompile (
-		'group1:artifac_id1:version1',
-		'group2:artifac_id2:version2'
-	)
+ testCompile (
+		'org.springframework.boot:spring-boot-starter-test'
+	) 
 }
