--- a/employee-management/source_code/build.gradle
+++ b/employee-management/source_code/build.gradle
@@ -29,8 +29,10 @@ dependencies {
 
  compile (
 		'org.springframework.boot:spring-boot-starter-data-jpa',
+		// JPA Data (We are going to use Repositories, Entities, Hibernate, etc...)
 		'org.springframework.boot:spring-boot-starter-web',
 		'mysql:mysql-connector-java'
+		// Use MySQL Connector-J
 	)
  testCompile (
 		'org.springframework.boot:spring-boot-starter-test'
