--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,20 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/employee-management/source_code/.settings/org.eclipse.jdt.core.prefs
+/employee-management/source_code/.settings/org.springframework.ide.eclipse.prefs
+/employee-management/source_code/settings.gradle
+/employee-management/source_code/.gradle/4.10.2/fileChanges/last-build.bin
+/employee-management/source_code/.gradle/4.10.2/fileHashes/fileHashes.bin
+/employee-management/source_code/.gradle/4.10.2/taskHistory/taskHistory.bin
+/employee-management/source_code/.gradle/buildOutputCleanup/outputFiles.bin
+/employee-management/source_code/bin/main/application.properties
+/employee-management/source_code/.gradle/4.10.2/fileHashes/fileHashes.lock
+/employee-management/source_code/.gradle/4.10.2/gc.properties
+/employee-management/source_code/.gradle/4.10.2/taskHistory/taskHistory.lock
+/employee-management/source_code/.gradle/buildOutputCleanup/buildOutputCleanup.lock
+/employee-management/source_code/.gradle/buildOutputCleanup/cache.properties
+/employee-management/source_code/.gradle/vcs-1/gc.properties
+/employee-management/source_code/gradle/wrapper/gradle-wrapper.properties
+/employee-management/source_code/gradlew
+/employee-management/source_code/gradlew.bat
