--- a/employee-management/source_code/build.gradle
+++ b/employee-management/source_code/build.gradle
@@ -30,7 +30,8 @@ dependencies {
  compile (
 		'org.springframework.boot:spring-boot-starter-data-jpa',
 		'org.springframework.boot:spring-boot-starter-web',
-		'mysql:mysql-connector-java'
+		'mysql:mysql-connector-java',
+		'org.projectlombok:lombok:1.16.12'
 		)
  testCompile (
 		'org.springframework.boot:spring-boot-starter-test'
