--- a/employee-management/source_code/src/main/resources/application.properties
+++ b/employee-management/source_code/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/employeemanager?useSSL=false&useUnicode=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123123123!@#
