--- a/employee-management/source_code/build.gradle
+++ b/employee-management/source_code/build.gradle
@@ -9,12 +9,11 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 bootJar {
-    baseName = 'EmployeeManager'
+    baseName = 'EmployeeManagement'
     version =  '0.1.0'
 }
 
