--- a/employee-management/source_code/build.gradle
+++ b/employee-management/source_code/build.gradle
@@ -9,12 +9,11 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 bootJar {
-    baseName = 'EmployeeManager'
+    baseName = 'EmployeeManagement'
     version =  '0.1.0'
 }
 
@@ -30,7 +29,8 @@ dependencies {
  compile (
 		'org.springframework.boot:spring-boot-starter-data-jpa',
 		'org.springframework.boot:spring-boot-starter-web',
-		'mysql:mysql-connector-java'
+		'mysql:mysql-connector-java',
+		'org.projectlombok:lombok:1.16.12'
 		)
  testCompile (
 		'org.springframework.boot:spring-boot-starter-test'
