--- a/employee-management/source_code/src/main/resources/application.properties
+++ b/employee-management/source_code/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+server.port = 8443
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/employeemanager?useSSL=false&useUnicode=true
-spring.datasource.username=root
-spring.datasource.password=123123123!@#
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+spring.datasource.username=system
+spring.datasource.password=Nnc123123123
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
